# calculator

./: .gitignore  CMakeLists.txt  Calculator.cpp  Calculator.hpp  InfixPostfix.cpp  InfixPostfix.hpp  Operation.hpp  README.md  calculator.cc  calculator.cpp  calculator.h  calculator.hpp  infix_postfix.cpp  infix_postfix.hpp  main.cc  main.cpp  operation.hpp  operationselector.hpp  tempCodeRunnerFile.cc
